--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,19 @@ name = vodka
 version = 0.0.1
 
 [options]
-packages = source
+packages = vodka, vodka.src.config , vodka.src.creator , vodka.src.parsearg
+# packages = find:
+# package_dir =
+#     = vodka
+include_package_data = True
+
+# [options.packages.find]
+# where = vodka
+
+# [options.package_data]
+# * =
+#   *.yml
 
 [options.entry_points]
 console_scripts =
-    vodka=source.app:main
+    vodka=vodka.app:main
